--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sample OT Page</title>
+    <title>Sample OT Page updated</title>
 </head>
 <body>
     <h1>Welcome to OT Repo</h1>
