--- a/ot-folder/index.html
+++ b/ot-folder/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <title>ot page updated check</title>
+    <title>ot page updated check finished</title>
   </head><body></body>
 </html>
