--- a/ot-third/index.html
+++ b/ot-third/index.html
@@ -1,4 +1,4 @@
 <html>
-  <head><title>ot sample3</title><body>ot sample 3
+  <head><title>ot sample3</title><body>ot sample 3 updated
   </body></head>
 </html>
